2008-10-11  Dan Nicolaescu  <dann@ics.uci.edu>

	* startup.el (command-line): Revert 2008-09-26 change, not
	necessary anymore.

2008-10-10  Andreas Schwab  <schwab@suse.de>

	* simple.el (minibuffer-complete-shell-command): Bind
	comint-delimiter-argument-list, comint-file-name-chars and
	comint-file-name-quote-list like shell-mode.

2008-10-10  Martin Rudalics  <rudalics@gmx.at>

	* window.el (pop-to-buffer): Fix misplacement of arg norecord in
	call of select-window.

2008-10-10  Jay Belanger  <jay.p.belanger@gmail.com>

	* calc/calc.el (calc-embedded-word-regexp)
	(calc-embedded-word-regexp-alist): New variables.
	(calc-embedded-open-word, calc-embedded-close-word)
	(calc-embedded-open-close-word-alist): Remove unused variables.

	* calc/calc-embed.el (calc-embedded-make-info): Use
	`calc-embedded-word-regexp' to find words.

2008-10-10  Martin Rudalics  <rudalics@gmx.at>

	* info.el (Info-extract-menu-counting): New argment no-detail to
	skip detailed node listings.
	(Info-forward-node): New argument not-up to inhibit going up.
	(Info-final-node): Call Info-extract-menu-counting and
	Info-forward-node with the new arguments set to avoid infinite
	looping.  (Bug#1116)

2008-10-10  Eli Zaretskii  <eliz@gnu.org>

	* startup.el (command-line): Don't invoke tool-bar-mode if it is
	not fboundp.

2008-10-09  Chong Yidong  <cyd@stupidchicken.com>

	* startup.el (command-line): Enable tool-bar-mode as long as it is
	not suppressed by X resources, regardless of the terminal.

	* tool-bar.el (tool-bar-mode): Only change tool-bar-lines on
	graphical terminals.
	(tool-bar-setup): No-op if called on a tty.

2008-10-09  Eli Zaretskii  <eliz@gnu.org>

	* frame.el (make-frame-on-tty): Use "F" inside interactive.  Support
	`pc' ``window-system''.

	* progmodes/compile.el (compilation-start): Resurrect the version
	for systems that don't support asynchronous subprocesses.

2008-10-09  Martin Rudalics  <rudalics@gmx.at>

	* window.el (pop-up-frames): Add choice graphic-only.